View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024765 | Open CASCADE | OCCT:DRAW | public | 2014-03-26 16:04 | 2014-11-11 12:51 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Mac | OS | OS | ||
Product Version | 6.7.1 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0024765: Compile errors on Mac OS X with GCC 4.2 | ||||
Description | The following error is reported when building current master by GCC 4.2 on Mac OS X: Info : -------> ViewerTest_ViewerCommands.cxx Error : Errors occured in Shell /Users/mnt/tools/WOK670/wok_entities/LOC/dev/IR-2014-03-20-IR-2014-03-20-occt/inc/TColStd_SequenceOfAsciiString.hxx: In function 'int VViewParams(Draw_Interpretor&, Standard_Integer, const char**)': /Users/mnt/tools/WOK670/wok_entities/LOC/dev/IR-2014-03-20-IR-2014-03-20-occt/inc/TColStd_SequenceOfAsciiString.hxx:108: error: 'TColStd_SequenceOfAsciiString::TColStd_SequenceOfAsciiString(const TColStd_SequenceOfAsciiString&)' is private /Users/mnt/tools/WOK670/wok_entities/LOC/dev/IR-2014-03-20-IR-2014-03-20-occt/src/ViewerTest/ViewerTest_ViewerCommands.cxx:4434: error: within this context | ||||
Tags | No tags attached. | ||||
Test case number | |||||
occt: master 900f7229 2014-03-26 12:06:10
Committer: bugmaster Details Diff |
0024765: Compile errors on Mac OS X with GCC 4.2 Sequence replaced by handle in map, to avoid involvement of copy constructor (private) |
Affected Issues 0024765 |
|
mod - src/ViewerTest/ViewerTest.cxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-03-26 16:04 |
|
New Issue | |
2014-03-26 16:04 |
|
Assigned To | => mkv |
2014-03-26 16:41 |
|
Note Added: 0028494 | |
2014-03-26 16:41 |
|
Assigned To | mkv => bugmaster |
2014-03-26 16:41 |
|
Status | new => resolved |
2014-03-27 16:14 | bugmaster | Status | resolved => reviewed |
2014-03-27 16:16 | bugmaster | Note Added: 0028513 | |
2014-03-27 16:16 | bugmaster | Status | reviewed => tested |
2014-03-28 16:38 | bugmaster | Changeset attached | => occt master 900f7229 |
2014-03-28 16:38 | bugmaster | Status | tested => verified |
2014-03-28 16:38 | bugmaster | Resolution | open => fixed |
2014-04-04 11:54 |
|
Target Version | 6.7.1 => 6.8.0 |
2014-11-11 12:47 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:51 |
|
Status | verified => closed |