0024765: Compile errors on Mac OS X with GCC 4.2

Sequence replaced by handle in map, to avoid involvement of copy constructor (private)